@@ -1,4 +1,4 @@
-﻿
+
 div.scrollingHotSpotLeftVisible {
     background-image: url(../images/arrow_left.gif);
     background-color: #fff;
