@@ -1,4 +1,6 @@
 14 Sept, 2017
+add missing jquery-ui is merged and minified js files
+fix iCarousel centering
 remove navbar border radius along top
 
 13 Sept, 2017
